# Apple-Drone-Disease-Classification

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  verify_imports.py
src/: batch_analyzer.py  chatbot.py  dashboard.py  detection.py  gemini_integration.py  quality_prediction.py  soil_service.py
