[project]
name = "apple-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "google-cloud-storage>=3.4.1",
    "google-generativeai>=0.8.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "typing-extensions>=4.15.0",
    "ultralytics>=8.4.6",
]
